mobility companies feature implemented

--- a/app/src/main/res/layout/mobility_companies.xml
+++ b/app/src/main/res/layout/mobility_companies.xml
@@ -46,11 +46,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/about_mobility_companies"
+                android:layout_marginLeft="5dp"
                 android:textSize="20dp"/>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="20dp"/>
+                android:layout_height="30dp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -62,7 +63,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="25dp"/>
+                android:layout_height="15dp"/>
 
 
             <ImageView
