crm and cloud companies feature implemented, hidden password feature implemented in the activity_main file.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
             android:layout_height="match_parent"
             android:hint="Password"
             android:textSize="25dp"
+            android:inputType="textPassword"
             android:layout_gravity="center"
             android:textStyle="italic"
             android:gravity="center"
