--- a/app/src/main/res/layout/cloud_companies.xml
+++ b/app/src/main/res/layout/cloud_companies.xml
@@ -18,7 +18,7 @@
             android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:src="@drawable/logo"/>
-            </LinearLayout>
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
@@ -27,15 +27,15 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/mobility_companies_heading"
+                android:text="@string/cloud_companies_heading"
                 android:textSize="30dp"
                 android:textColor="@color/black"
                 android:textAlignment="center"
@@ -44,16 +44,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/about_mobility_companies"
+                android:text="@string/about_cloud_companies"
                 android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:justificationMode="inter_word"
                 android:textStyle="normal"
                 android:layout_margin="10dp"/>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="30dp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -70,42 +67,61 @@
 
 
             <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/ola"
-                    android:src="@drawable/ola_image"
-                    android:adjustViewBounds="true"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/oracle"
+                android:src="@drawable/oracle_image"
+                android:adjustViewBounds="true"/>
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="OLA"
-                    android:textAlignment="center"
-                    android:textSize="20dp"
-                    android:textStyle="bold"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="ORACLE CLOUD INFRASTRUCTURE"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:textStyle="bold"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="30dp"/>
 
             <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/uber"
-                    android:src="@drawable/uber_image"
-                    android:adjustViewBounds="true"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/vmware"
+                android:src="@drawable/vmware_image"
+                android:adjustViewBounds="true"/>
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="UBER"
-                    android:textAlignment="center"
-                    android:textSize="20dp"
-                    android:textStyle="bold"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="VMWARE"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:textStyle="bold"/>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/redhat"
+                android:src="@drawable/redhat_image"
+                android:adjustViewBounds="true"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="REDHAT"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:textStyle="bold"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
         </LinearLayout>
 
     </ScrollView>
