--- a/app/src/main/res/layout/crm_companies.xml
+++ b/app/src/main/res/layout/crm_companies.xml
@@ -6,7 +6,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="25dp" />
+        android:layout_height="25dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:src="@drawable/logo"/>
-            </LinearLayout>
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
@@ -27,15 +27,15 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/mobility_companies_heading"
+                android:text="@string/crm_companies_heading"
                 android:textSize="30dp"
                 android:textColor="@color/black"
                 android:textAlignment="center"
@@ -44,16 +44,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/about_mobility_companies"
+                android:text="@string/about_crm_companies"
                 android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:justificationMode="inter_word"
                 android:textStyle="normal"
                 android:layout_margin="10dp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="30dp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -70,42 +66,42 @@
 
 
             <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/ola"
-                    android:src="@drawable/ola_image"
-                    android:adjustViewBounds="true"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/salesforce"
+                android:src="@drawable/salesforce_image"
+                android:adjustViewBounds="true"/>
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="OLA"
-                    android:textAlignment="center"
-                    android:textSize="20dp"
-                    android:textStyle="bold"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="SALESFORCE"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:textStyle="bold"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="30dp"/>
 
             <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/uber"
-                    android:src="@drawable/uber_image"
-                    android:adjustViewBounds="true"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/servicenow"
+                android:src="@drawable/servicenow_image"
+                android:adjustViewBounds="true"/>
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="UBER"
-                    android:textAlignment="center"
-                    android:textSize="20dp"
-                    android:textStyle="bold"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="SERVICENOW"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:textStyle="bold"/>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="25dp" />
         </LinearLayout>
 
     </ScrollView>
