--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -548,9 +548,21 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"/>
+                    android:layout_height="10dp"/>
+
+                <Button
+                    android:id="@+id/customButton15"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="MOST IMPORTANT CODING QUESTIONS"/>
+
 
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="30dp"/>
 
         </LinearLayout>
 
