DBMS and SQL resources features implemented.

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,5 +15,6 @@
         android:layout_height="match_parent"
         app:srcCompat="@drawable/logo"
         android:backgroundTint="@color/white"
+        android:background="@color/white"
        />
 </RelativeLayout>
